--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -210,18 +210,22 @@ dependencies:
   - zstd=1.3.7
   - pip:
     - absl-py==0.11.0
+    - arrow==0.17.0
     - astor==0.8.1
     - bcrypt==3.2.0
+    - binaryornot==0.4.4
     - cached-property==1.5.2
     - cbor2==5.2.0
     - civis==1.15.1
     - civisml-extensions==0.3.0
+    - cookiecutter==1.7.2
     - dropbox==11.0.0
     - ftputil==4.0.0
     - gast==0.2.2
     - google-pasta==0.2.0
     - grpcio==1.34.0
     - h5py==3.1.0
+    - jinja2-time==0.2.0
     - joblib==0.14.1
     - jsonref==0.2
     - keras-applications==1.0.8
@@ -232,11 +236,13 @@ dependencies:
     - opt-einsum==3.3.0
     - paramiko==2.7.2
     - ply==3.11
+    - poyo==0.5.0
     - protobuf==3.14.0
     - pubnub==4.8.0
     - pycryptodomex==3.9.9
     - pynacl==1.4.0
     - pysftp==0.2.9
+    - python-slugify==4.0.1
     - requests-toolbelt==0.9.1
     - scikit-learn==0.22.2.post1
     - stone==3.2.1
@@ -245,5 +251,6 @@ dependencies:
     - tensorflow==1.15.4
     - tensorflow-estimator==1.15.1
     - termcolor==1.1.0
+    - text-unidecode==1.3
     - werkzeug==1.0.1
     - wrapt==1.12.1
